# googletest_small_example

./: CMakeLists.txt  README.md
include/: application.hpp  driver.h
src/: application.cpp
test/: CMakeLists.txt
test/mocks/: mock_driver.hpp
test/test_ut/: CMakeLists.txt  application_test_ut.cpp
